# magiczettel

./: .gitignore  Cargo.toml  goods.yaml
magiczettel/: Cargo.toml
magiczettel/src/: main.rs
shoppinglist/: Cargo.toml
shoppinglist/src/: lib.rs
shoppinglist/www/: README.md  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
zettelwirtschaft/: Cargo.toml
zettelwirtschaft/src/: lib.rs
